--- a/index.html
+++ b/index.html
@@ -103,6 +103,11 @@
                         <!-- <div class="textbox" tabindex="0" ondblclick="$('input').trigger('select');">
                             <input type="text" name="" id="" value="Hello!">                            
                         </div> -->
+                        <!-- <div class="textbox" tabindex="0">
+                            <textarea name="" id="" cols="30" rows="10" placeholder="Add text here!"></textarea>  
+                            <div class="cover"></div>
+                        </div> -->
+                        <!-- <textarea name="text" oninput='this.style.height = "";this.style.height = this.scrollHeight + "px"'></textarea> -->
                     </div>
                 </div>
             </div>
