--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,8 @@
             <div class="align-items-center justify-content-center justify-content-lg-start">
                 <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                     <li>
-                        <button class="btn btn-outline-light me-2">Open</button>
+                        <label for="img-input" class="btn btn-outline-light me-2">Open</label>
+                        <input type="file" id="img-input" class="input-btn" accept="image/*">
                     </li>
                     <li>
                         <button class="btn btn-outline-light me-2">Save</button>
@@ -127,6 +128,7 @@
     <script src="js/drag.js"></script>
     <script src="js/unsplash.js"></script>
     <script src="js/textbox.js"></script>
+    <script src="js/upload.js"></script>
     <!-- Include the Quill library -->
     <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
     <script src="js/quill.js"></script>
