--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
                         <input type="file" id="img-input" class="input-btn" accept="image/*">
                     </li>
                     <li>
-                        <button class="btn btn-outline-light me-2">Save</button>
+                        <button class="btn btn-outline-light me-2" onclick="renderImg()">Save</button>
                     </li>
                 </ul>
             </div>
@@ -125,12 +125,18 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.3.js" integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM=" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/49b0e75428.js" crossorigin="anonymous"></script> 
+    <!-- Include the Quill library -->
+    <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
+    <script src="js/quill.js"></script>
+    <!-- Include the HTML2CANVAS library -->
+    <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
+    <!-- Include FileSaver.js -->
+    <script src="js/fileSaver.js"></script>
+    <!-- Include local JS files -->
     <script src="js/drag.js"></script>
     <script src="js/unsplash.js"></script>
     <script src="js/textbox.js"></script>
     <script src="js/upload.js"></script>
-    <!-- Include the Quill library -->
-    <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
-    <script src="js/quill.js"></script>
+    <script src="js/saveImg.js"></script>
 </body>
 </html>
