--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,11 @@
     <!-- Include stylesheet -->
     <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
     <title>Say The Word</title>
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/img/redketchup/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/img/redketchup/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/img/redketchup/favicon-16x16.png">
+    <link rel="manifest" href="/img/redketchup/site.webmanifest">
 </head>
 <body>
     <header class="p-3 text-bg-dark" style="border-bottom: 3px solid #282A3A;" style="height: 10vh;">
@@ -29,80 +34,28 @@
 
     <div class="container-fluid m-0">
         <div class="row justify-content-start">
-            <div class="col-auto p-0">
-                <div class="d-flex flex-column flex-shrink-0 text-white bg-dark" style="width: 17rem; height: 75vh;">
-                    <div class="d-grid gap-2 p-3 flex-column" style="border-bottom: 3px solid #282A3A;">
+            <div class="col-xl-3 col-md-4 col-12 p-0">
+                <div class="d-flex flex-column flex-shrink-0 text-white bg-dark" style="width: auto; height: 100%;">
+                    <div class="d-grid gap-2 p-3 flex-column">
                         <button href="#" class="add-text-btn btn btn-outline-light" onclick="addtext()">
                             <i class="fa-solid fa-plus"></i>
                             Add Text
                         </button>
                     </div>
                     <div class="text-properties container p-3 flex-grow-1 flex-column justify-content-center" style="display: block;">
-                        <h4>Text properties</h4>
-                        <!-- <div class="text-menu d-flex flex-column">
-                            <div class="d-grid gap-2 dropdown my-2">
-                                <button class="btn btn-outline-light dropdown-toggle" type="button" id="dropdownMenu" data-bs-toggle="dropdown" aria-expanded="false">
-                                    Choose font
-                                </button>
-                                <ul class="dropdown-menu" aria-labelledby="dropdownMenu">
-                                    <li><button class="dropdown-item" type="button">Arial</button></li>
-                                    <li><button class="dropdown-item" type="button">Roboto</button></li>
-                                </ul>
-                            </div>
-                            <div class="my-2 row">
-                                <div class="col">
-                                    <input type="number" class="form-control bg-dark text-light" name="font-size" id="">
-                                </div>
-                                <div class="col-auto">
-                                    <input type="color" class="form-control form-control-color bg-dark ql-color" value="#563d7c" name="font-size" id="">
-                                </div>
-                            </div>
-                            <div class="my-2 row">
-                                <div class="col-auto btn-group-sm">
-                                    <button class="btn btn-outline-light">
-                                        <i class="fa-solid fa-bold fa-xs"></i>
-                                    </button>
-                                    <button class="btn btn-outline-light">
-                                        <i class="fa-solid fa-italic fa-xs"></i>
-                                    </button>
-                                    <button class="btn btn-outline-light">
-                                        <i class="fa-solid fa-underline fa-xs"></i>
-                                    </button>
-                                </div>
-                                <div class="col-6">
-                                    <div class="row row-cols-4">
-                                        <div class="p-0 col">
-                                            <button class="btn btn-outline-light rounded-end-0 btn-sm w-100">
-                                                <i class="fa-solid fa-align-left fa-xs"></i>
-                                            </button>
-                                        </div>
-                                        <div class="p-0 col">
-                                            <button class="btn btn-outline-light rounded-0 btn-sm w-100">
-                                                <i class="fa-solid fa-align-center fa-xs"></i>
-                                            </button>
-                                        </div>
-                                        <div class="p-0 col">
-                                            <button class="btn btn-outline-light rounded-0 btn-sm w-100">
-                                                <i class="fa-solid fa-align-right fa-xs"></i>
-                                            </button>
-                                        </div>
-                                        <div class="p-0 col">
-                                            <button class="btn btn-outline-light rounded-start-0 btn-sm w-100">
-                                                <i class="fa-solid fa-align-justify fa-xs"></i>
-                                            </button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div> -->
-                        <div class="editor-container">
-
-                        </div>                        
+                        <h4>
+                            Text properties 
+                        </h4>
+                        <button href="#" class="delete-text-btn btn btn-outline-light" onclick="deleteTextbox()" style="width: 100%; margin-bottom: 10px;">
+                            <i class="fa-solid fa-trash"></i>
+                            Delete Text
+                        </button>
+                        <div class="editor-container"></div>                        
                     </div>
                 </div>
             </div>
-            <div class="col-9 p-0 flex-grow-1">
-                <div class="d-flex align-items-center justify-content-center" style="height: 75vh; background-color: #03001C;">
+            <div class="col-xl-9 col-md-8 col-12 p-0 flex-grow-1">
+                <div class="d-flex align-items-center justify-content-center" style="height: 85vh; background-color: #03001C;">
                     <div class="img-to-edit">
                         <!-- <div class="textbox" tabindex="0">
                             <div class="cover"></div>
