Fix minor display errors

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <link rel="manifest" href="/img/redketchup/site.webmanifest">
 </head>
 <body>
-    <header class="p-3 text-bg-dark" style="border-bottom: 3px solid #282A3A;" style="height: 10vh;">
+    <header class="p-3 text-bg-dark" style="border-bottom: 3px solid #282A3A; height: 5rem;">
         <div class="container">
             <div class="align-items-center justify-content-center justify-content-lg-start">
                 <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
